# public-source-extractor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
assets/source/: README.md
docs/: release-checklist.md  repository-metadata.md
docs/releases/: v0.1.0-alpha.1.md
examples/: example-report.json  example-report.md
scripts/: render-visuals.sh
src/public_source_extractor/: __init__.py  cli.py  errors.py  output.py  provider.py  url_policy.py
src/public_source_extractor/schemas/: output-v0.1.schema.json
tests/: test_cli.py  test_contract.py  test_examples.py  test_output.py  test_provider.py  test_release_metadata.py  test_url_policy.py  test_visual_assets.py
